fix some spacings

--- a/logviewer/components/logs-table2/logstable2.less
+++ b/logviewer/components/logs-table2/logstable2.less
@@ -34,14 +34,17 @@
             padding-left: 8px;
             box-sizing: border-box;
             white-space: nowrap;
+            overflow: hidden;
 
             &.date
             {
+                width: 90px;
                 min-width: 90px;
             }
 
             &.type
             {
+                width: 30px;
                 min-width: 30px;
                 padding-left: 0;
                 color: var(--type-colour);
@@ -49,6 +52,7 @@
 
             &.group
             {
+                width: 130px;
                 min-width: 130px;
             }
         }
